project-11-kubernetes-advanced-networking/k8s/04-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edge-demo
  namespace: edge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: edge-demo
  template:
    metadata:
      labels:
        app: edge-demo
    spec:
      containers:
        - name: nginx
          image: nginx:stable
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
