project-11-kubernetes-advanced-networking/k8s/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: edge-demo-svc
  namespace: edge
spec:
  selector:
    app: edge-demo
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
