project-11-kubernetes-advanced-networking/k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edge-demo-ing
  namespace: edge
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: demo.francesehinor.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: edge-demo-svc
                port:
                  number: 80
